# ProducerConsumer

lab_asn/: CMakeLists.txt  main.cpp  reader.cpp  report.cpp  report.h  shared.h  writer.cpp
lab_threaded/: CMakeLists.txt  main.cpp  main3.cpp
